[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-deterministic-nodes"
version = "1.0.0"
description = "Batch-invariant inference nodes for guaranteed reproducibility in ComfyUI"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Joseph Ibrahim", email = "joseph@josephibrahim.com"}
]
keywords = [
    "comfyui",
    "deterministic",
    "reproducibility",
    "batch-invariant",
    "inference",
    "moe",
    "context-memory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/joe002/comfyui-deterministic-nodes"
Repository = "https://github.com/joe002/comfyui-deterministic-nodes"
Issues = "https://github.com/joe002/comfyui-deterministic-nodes/issues"

[tool.setuptools.packages.find]
where = ["."]
